--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Local environment variables
+local.env
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
