--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
     "@supabase/supabase-js": "^2.58.0",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
