--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material-nextjs": "^7.3.2",
     "@supabase/supabase-js": "^2.58.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.5.4",
     "next-sitemap": "^4.2.3",
     "react": "19.1.0",
