--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@mui/material-nextjs": "^7.3.6",
     "@mui/x-charts": "^8.15.0",
     "@supabase/supabase-js": "^2.58.0",
     "@vercel/analytics": "^1.5.0",
